--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,6 +1,23 @@
 {
-  "prettier.disableLanguages": ["javascript", "typescript"],
+  "prettier.disableLanguages": [
+    "javascript",
+    "typescript"
+  ],
   "eslint.autoFixOnSave": false,
   "tsserver.formatOnType": false,
-  "coc.preferences.formatOnType": false
+  "coc.preferences.formatOnType": false,
+  "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "json"
+  ],
+  "javascript.autoClosingTags": true,
+  "typescript.autoClosingTags": true,
+  "emmet.includeLanguages": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "html"
+  ],
+  "codeLens.enable": false
 }
